package.json commit

--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "craftwebsite",
+  "version": "1.0.0",
+  "description": "<br>\r Project 3 IS 403\r <br>\r Breanna, Jake, Gabe, Lili\r <br><br><br>\r Set up steps when zipping code and using it on a localhost\r <br>\r Step 1:\r <br>\r npm init -> Creates local package.json file\r <br>\r Step 2:\r <br>\r npm install --save express -> Creates node_modules dir and package-lock file to be stored locally",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
